# ANNIE

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_INTERVIEW.md  README.md  README_EN.md  base_structure.md  pyproject.toml
config/: model_config.yaml
data/npcs/: example_npc.yaml  (+3 more)
docs/: CHANGELOG.md  midnight_train_demo_guide.md  minecraft_integration_design.md  ocr_and_torch_explanation.md  town_generative_agents_mapping.md  town_multi_npc_smoke.md
double_shadow/: README.md  dm_handbook.md  evidence_graph.md  manifest.json  player_briefing.md  script.md  timeline.md  truth.json
scripts/: generate_town_replay_viewer.py  run_demo.py  run_headless_task.py  run_interrogation_game.py  run_midnight_train_demo.py  run_minecraft_monitor.py  run_minecraft_task.py  run_minecraft_task_video.py  run_phase2_demo.py  run_town_day_real_llm.py  run_town_multi_npc_real_llm.py  run_town_resident_planning_real_llm.py  run_town_runtime.py  show_town_perception.py  show_town_relationship_cues.py  show_town_replay_snapshot.py  show_town_stage1.py  smoke_minecraft_bridge.py  smoke_npc_loop.py  trace_action_loop.py  trace_action_loop_real_llm.py  validate_townworld_full_day_real_llm.py  validate_townworld_full_stack_real_llm.py  validate_townworld_generative_agents_real_llm.py  validate_townworld_long_run_real_llm.py  validate_townworld_npc_graph_real_llm.py  validate_townworld_phase1_multiday.py  validate_townworld_phase1_multiday_real_llm.py  validate_townworld_phase2_semantic_real_llm.py  validate_townworld_scaled_full_real_llm.py  validate_townworld_scaled_real_llm.py
(+525 files in other folders)
